Fix bug when showing images for open shifts

--- a/src/components/forms/styles/forms.css
+++ b/src/components/forms/styles/forms.css
@@ -258,6 +258,18 @@ fieldset, legend {
     cursor: pointer;
 }
 
+.demo-btn {
+    border: none;
+    background: none;
+    color: #03A9F4;
+    font-size: 11px;
+}
+
+.demo-btn:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 @media only screen and (min-width: 640px) {
     .form-field input,
     .form-field select {
