--- a/src/components/styles/nav-bar.css
+++ b/src/components/styles/nav-bar.css
@@ -47,6 +47,7 @@
 
 .navbar-logo-wrapper h1 {
     margin: 0;
+    color: #03A9F4;
 }
 
 .fa-window-restore {
