--- a/src/components/styles/schedule-view.css
+++ b/src/components/styles/schedule-view.css
@@ -34,7 +34,7 @@
 }
 
 .view-filter h3 {
-  font-family: Helvetica;
+  font-size: 15px;
   font-weight: 100;
   text-align: center;
   margin: 0 auto;
